[gd_scene load_steps=3 format=3 uid="uid://cm1u15wwfnh5y"]

[ext_resource type="Script" path="res://DialogueScene.gd" id="1_6nh3j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ha3lm"]
size = Vector2(10, 10)

[node name="DialogueScene" type="Area2D"]
collision_layer = 255
collision_mask = 255
script = ExtResource("1_6nh3j")

[node name="TriggerAfter" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.19209e-07)
scale = Vector2(7.87999, 8.25961)
shape = SubResource("RectangleShape2D_ha3lm")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TriggerAfter" to="." method="_on_trigger_after_timeout"]
